feat(migrations DB): add migration
