# backend/gen/http/enrollment/server/paths.go
@@ -1,0 +1,32 @@
+// Code generated by goa v3.21.0, DO NOT EDIT.
+//
+// HTTP request path constructors for the enrollment service.
+//
+// Command:
+// $ goa gen github.com/enrollment/design/api
+
+package server
+
+import (
+	"fmt"
+)
+
+// EnrollEnrollmentPath returns the URL path to the enrollment service enroll HTTP endpoint.
+func EnrollEnrollmentPath() string {
+	return "/enrollment"
+}
+
+// UpdateEnrollmentEnrollmentPath returns the URL path to the enrollment service update_enrollment HTTP endpoint.
+func UpdateEnrollmentEnrollmentPath() string {
+	return "/enrollment"
+}
+
+// DeleteEnrollmentEnrollmentPath returns the URL path to the enrollment service delete_enrollment HTTP endpoint.
+func DeleteEnrollmentEnrollmentPath(attendeeID int32, courseID int32) string {
+	return fmt.Sprintf("/enrollment/%v/%v", attendeeID, courseID)
+}
+
+// ListEnrolledUsersEnrollmentPath returns the URL path to the enrollment service list_enrolled_users HTTP endpoint.
+func ListEnrolledUsersEnrollmentPath(courseID int32) string {
+	return fmt.Sprintf("/enrollment/course/%v/users", courseID)
+}
